--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             color: darkred;
             font-weight: bold;
             text-decoration:underline;
-            margin-top:150px;
+            margin-bottom:0;
         }
         h3{
             color: brown;
@@ -38,6 +38,7 @@
         }
        .image{
         text-align: center;
+        margin-bottom:0; margin-top:95px;
        }
        b{
         color: red;
@@ -134,6 +135,7 @@
 
 
 </html>
+
 
 
 
