--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
        .image{
         text-align: center;
-        margin-bottom:0; margin-top:80px;
+        margin-bottom:0;
        }
        b{
         color: red;
@@ -135,6 +135,7 @@
 
 
 </html>
+
 
 
 
