--- a/index.html
+++ b/index.html
@@ -22,14 +22,24 @@
             margin-top: 2px;
         }
         p{
-            font-style:italic;
+            /* font-style:italic;
             color: darkred;
             font-weight: bold;
             text-decoration:underline;
             margin-bottom:0;
-            margin-top:150px;
+            margin-top:150px; */
             
         }
+        .footer-note {
+        font-style:italic;
+        color: black; /* Changed from darkred/black for better visibility */
+        font-weight: bold;
+        text-decoration: none; /* Removed underline from the p tag itself */
+        margin-bottom: 0;
+        margin-top: 15px; /* Reduced the top margin to bring it closer to the image */
+        font-size:14px;
+        text-align: center;
+    }
         h3{
             color: brown;
             text-decoration-line:underline;
@@ -129,7 +139,7 @@
     <div class="image">
     <img src="under-construction-site-removebg-preview.png" width="450px" alt="THIS-PAGE-UNDER-CONSTRUCTION">
     </div>       
-    <p style="text-align:center; color:black; font-size:14px;">Last Updated: <b>22 October 2025</b><br>
+    <p class="footer-note">Last Updated: <b>22 October 2025</b><br>
         ⚠️ Note: All software links provided here are publicly available from their respective official sources. 
         We do not host or modify any files. For latest versions, please visit the official vendor websites.
         </p>
@@ -137,6 +147,7 @@
 
 
 </html>
+
 
 
 
