--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
             margin-top: 2px;
         }
         p{
+    /* ... other styles ... */
+    margin-bottom:0;
+    margin-top:150px; /* <--- THIS IS THE CULPRIT! */
+
             /* font-style:italic;
             color: darkred;
             font-weight: bold;
             text-decoration:underline;
             margin-bottom:0;
-            margin-top:150px; */
-            
+           margin-top:150px; */    
         }
         .footer-note {
         font-style:italic;
@@ -147,6 +150,7 @@
 
 
 </html>
+
 
 
 
