--- a/index.html
+++ b/index.html
@@ -141,14 +141,15 @@
     <div class="image">
     <img src="under-construction-site-removebg-preview.png" width="450px" alt="THIS-PAGE-UNDER-CONSTRUCTION">
     </div>       
-    <p class="footer-note">Last Updated: <b>22 October 2025</b><br>
-        ⚠️ Note: All software links provided here are publicly available from their respective official sources. 
-        We do not host or modify any files. For latest versions, please visit the official vendor websites.
-        </p>
+   <p class="footer-note">Last Updated: <b>22 October 2025</b><br>
+    ⚠️ Note: All software links provided here are publicly available from their respective official sources. <br>
+    We do not host or modify any files. For latest versions, please visit the official vendor websites.<br>
+</p>
 </body>
 
 
 </html>
+
 
 
 
