--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             text-decoration-line: underline;
             font-size: 65px;        
         }
+        @media (max-width: 600px) {
+        h1 {
+            /* मोबाइल के लिए फॉन्ट साइज़ कम करें */
+            font-size: 35px; /* New smaller size for mobile */
+        }
+    }
         body{
             line-height: 18px;
             background-color:rgb(76, 202, 202);
@@ -135,6 +141,7 @@
 </body>
 
 </html>
+
 
 
 
