--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
         h1{
             text-align: center;
             text-decoration-line: underline;
-            font-size: 65px;        
+            font-size: 65px;  
+            line-height: 1.2;
         }
         @media (max-width: 600px) {
         h1 {
             /* मोबाइल के लिए फॉन्ट साइज़ कम करें */
-            font-size: 35px; /* New smaller size for mobile */
+            font-size: 30px; /* New smaller size for mobile */
+            line-height: 1.5;
         }
     }
         body{
@@ -141,6 +143,7 @@
 </body>
 
 </html>
+
 
 
 
