--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <li><a href="https://ais.3.12ectfi.com/softwares/1722066403.rar">PRINTER(22CS)</a></li>
                 <li><a href="https://aisectfi.com/softwares/1722064466.zip">PRINTER(50)</a></li>
                 <li><a href="https://aisectfi.com/softwares/1722066403.rar">PRINTER(OLIVITE)</a></li>
-                <li><a href="">GPS</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <p>https://kiosk.bank.sbi</p>
             </ul>  
         </details> 
@@ -84,7 +84,7 @@
                 <li><a href="">PERI</a></li>
                 <li><a href="">PRINTER</a></li>
                 <li><a href="">PINPAD</a></li>
-                <li><a href="">GPS</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <P>https://fig.bankofbaroda.in</p>
                 
             </ul>
@@ -95,7 +95,7 @@
             <ul>
                 <li><a href="">MORPHO(L1)</a></li>
                 <li><a href="">MANTRA(L1)</a></li>
-                <li><a href="">GPS</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <p>https://fi.bankofindia.bank.in</p>
             </ul>
             </details>
@@ -142,6 +142,7 @@
 </body>
 
 </html>
+
 
 
 
