--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <summary>BOB</summary>
             <ul>
                 <li><a href="">MORPHO(L1)</a></li>
-                <li><a href="">MANTRA(L1)</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="">PERI</a></li>
                 <li><a href="">PRINTER</a></li>
                 <li><a href="">PINPAD</a></li>
@@ -94,7 +94,7 @@
                 <summary>BOI</summary>
             <ul>
                 <li><a href="">MORPHO(L1)</a></li>
-                <li><a href="">MANTRA(L1)</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <p>https://fi.bankofindia.bank.in</p>
             </ul>
@@ -105,7 +105,7 @@
 
             <ul>
                 <li><a href="">MORPHO(L1)</a></li>
-                <li><a href="">MANTRA(l1)</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(l1)</a></li>
                 <li><a href="">GANSEVA</a></li>
                 <li><a href="">PINPAD</a></li>
                 <p>https://fi.centralbank.org.in/CBI_Webapplication</p>
@@ -116,7 +116,7 @@
                 <summary>UBI</summary>
             <ul>
                 <li><a href="">MORPHO(L1)</a></li>
-                <li><a href="">MANTRA</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="">PINPAD</a></li>
                 <P>https://fiservices1.unionbankofindia.bank.in:9018/kiosk/bclogin</P>
             </ul>
@@ -142,6 +142,7 @@
 </body>
 
 </html>
+
 
 
 
