--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                 <li><a href="https://aisectfi.com/softwares/1755942658.zip">MORPHO(L1 V.13)</a></li>
                 <li><a href="https://drive.google.com/file/d/1hJwZ5IStlnSg7AGgyBneLegClH72WLi9/view?usp=sharing">MORPHO(L0_NON_RD)</a></li>
                 <li><a href="https://accesscomputech-my.sharepoint.com/personal/jalpan_acpl_ind_in/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fjalpan%5Facpl%5Find%5Fin%2FDocuments%2FRD%5FSETUPS%2FACPL%5FL1%5FAPI%5FSETUP&ga=1">STARTEK(L1_API)</a></li>
-                <li><a href="https://aisectfi.com/softwares/1722067168.rar">PERI(`1.79)</a></li>
-                <li><a href="https://aisectfi.com/softwares/1722066403.rar">YONO(MATM)</a></li>
-                <li><a href="https://aisectfi.com/softwares/1722066131.zips">YONO(MATM 3.12)</a></li>
+                <li><a href="https://aisectfi.com/softwares/1722067168.rar">PERI(1.79)</a></li>
+                <li><a href="https://aisectfi.com/softwares/1722066403.rar">(MATM-YONO)</a></li>
+                <li><a href="https://aisectfi.com/softwares/1722066131.zips">(MATM 3.12)</a></li>
                 <li><a href="https://aisectfi.com/softwares/1722066403.rar">PRINTER(22CS)</a></li>
-                <li><a href="https://ais.3.12ectfi.com/softwares/1722066403.rar">PRINTER(22CS)</a></li>
-                <li><a href="https://aisectfi.com/softwares/1722064466.zip">PRINTER(50)</a></li>
-                <li><a href="https://aisectfi.com/softwares/1722066403.rar">PRINTER(OLIVITE)</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/EPSON_Printer_driver_Onlyfor-PLQ50CSK.zip">PRINTER(50)</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Olivetti.rar">PRINTER(OLIVITE)</a></li>
+                <li><a href=https://github.com/sachinkojage619/Banking-Software/blob/main/KITV6.0.1_150720.rar">KEY_INJECT_TOOL</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <p>https://kiosk.bank.sbi</p>
             </ul>  
@@ -83,7 +83,7 @@
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="">PERI</a></li>
                 <li><a href="">PRINTER</a></li>
-                <li><a href="">PINPAD</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Pax_Driver(UBI__BOB).rar">PINPAD</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <P>https://fig.bankofbaroda.in</p>
                 
@@ -117,7 +117,7 @@
             <ul>
                 <li><a href="">MORPHO(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
-                <li><a href="">PINPAD</a></li>
+                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Pax_Driver(UBI__BOB).rar">PINPAD</a></li>
                 <P>https://fiservices1.unionbankofindia.bank.in:9018/kiosk/bclogin</P>
             </ul>
             </details>
@@ -142,6 +142,7 @@
 </body>
 
 </html>
+
 
 
 
