--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
            <details> 
                 <summary>BOB</summary>
             <ul>
+                <li><a href="">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="">MORPHO(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="">PERI</a></li>
@@ -93,6 +94,7 @@
             <details>
                 <summary>BOI</summary>
             <ul>
+                <li><a href="">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="">MORPHO(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Driver-for-USB-GPS-8.rar">GPS</a></li>
@@ -104,6 +106,7 @@
                 <summary>CBI</summary>
 
             <ul>
+                <li><a href="">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="">MORPHO(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(l1)</a></li>
                 <li><a href="">GANSEVA</a></li>
@@ -115,6 +118,7 @@
             <details>
                 <summary>UBI</summary>
             <ul>
+                <li><a href="">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="">MORPHO(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Pax_Driver(UBI__BOB).rar">PINPAD</a></li>
@@ -142,6 +146,7 @@
 </body>
 
 </html>
+
 
 
 
