--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <li><a href="">PERI</a></li>
                 <li><a href="">PRINTER</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Pax_Driver(UBI__BOB).rar">PINPAD</a></li>
-                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Driver-for-USB-GPS-8.rar">GPS</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/7bb4b8d809a37804082fae88d883019874d52ec2/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <P>https://fig.bankofbaroda.in</p>
                 
             </ul>
@@ -97,7 +97,7 @@
                 <li><a href="">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="">MORPHO(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
-                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Driver-for-USB-GPS-8.rar">GPS</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/7bb4b8d809a37804082fae88d883019874d52ec2/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <p>https://fi.bankofindia.bank.in</p>
             </ul>
             </details>
@@ -147,6 +147,7 @@
 
 </html>
 <!-- https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/ + [File Ka Pura Naam]<!--  --> -->
+
 
 
 
