--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li><a href="https://aisectfi.com/softwares/1722066403.rar">PRINTER(22CS)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/EPSON_Printer_driver_Onlyfor-PLQ50CSK.zip">PRINTER(50)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Olivetti.rar">PRINTER(OLIVITE)</a></li>
-                <li><a href=https://github.com/sachinkojage619/Banking-Software/blob/main/KITV6.0.1_150720.rar">KEY_INJECT_TOOL</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/KITV6.0.1_150720.rar">KEY_INJECT_TOOL</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/7bb4b8d809a37804082fae88d883019874d52ec2/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <p>https://kiosk.bank.sbi</p>
             </ul>  
@@ -147,6 +147,7 @@
 
 </html>
 <!-- https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/ + [File Ka Pura Naam]<!--  --> -->
+
 
 
 
