--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <ul>
                 <li><a href="https://cdn.shopify.com/s/files/1/2363/5731/files/Windows_L1-RDServiceV5.0.0.10-HTTPs-127.0.0.1_2.zip?v=1758707582">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/Windows_L1-RDServiceV2.0.0.13-HTTPs-127.0.0.1_1.zip">MORPHO(L1)</a></li>
-                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MORPHO(L1 V.13)</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="">PERI</a></li>
                 <li><a href="">PRINTER</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Pax_Driver(UBI__BOB).rar">PINPAD</a></li>
@@ -96,7 +96,7 @@
             <ul>
                 <li><a href="https://cdn.shopify.com/s/files/1/2363/5731/files/Windows_L1-RDServiceV5.0.0.10-HTTPs-127.0.0.1_2.zip?v=1758707582">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/Windows_L1-RDServiceV2.0.0.13-HTTPs-127.0.0.1_1.zip">MORPHO(L1 V.13)</a></li>
-                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/7bb4b8d809a37804082fae88d883019874d52ec2/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <p>https://fi.bankofindia.bank.in</p>
             </ul>
@@ -108,7 +108,7 @@
             <ul>
                 <li><a href="https://cdn.shopify.com/s/files/1/2363/5731/files/Windows_L1RDServiceV5.0.0.10-HTTP_2.zip?v=1758707582">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="">MORPHO(L1 V.13)</a></li>
-                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(l1)</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/MANTRA(L1).rar">MANTRA(l1)</a></li>
                 <li><a href="">GANSEVA</a></li>
                 <li><a href="">PINPAD</a></li>
                 <p>https://fi.centralbank.org.in/CBI_Webapplication</p>
@@ -120,7 +120,7 @@
             <ul>
                 <li><a href="https://cdn.shopify.com/s/files/1/2363/5731/files/Windows_L1RDServiceV5.0.0.10-HTTP_2.zip?v=1758707582">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/">MORPHO(L1 V.13)</a></li>
-                <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
+                <li><a href="hhttps://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Pax_Driver(UBI__BOB).rar">PINPAD</a></li>
                 <P>https://fiservices1.unionbankofindia.bank.in:9018/kiosk/bclogin</P>
             </ul>
@@ -147,6 +147,7 @@
 
 </html>
 <!-- https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/ + [File Ka Pura Naam]<!--  --> -->
+
 
 
 
