--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li><a href="https://cdn.shopify.com/s/files/1/2363/5731/files/Windows_L1RDServiceV5.0.0.10-HTTPs-LocalHost_2.zip?v=1758707582">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/Windows_L1RDServiceV2.0.0.13-HTTPs-LocalHost">MORPHO(L1 V.13)</a></li>
                 <li><a href="https://drive.google.com/file/d/1hJwZ5IStlnSg7AGgyBneLegClH72WLi9/view?usp=sharing">MORPHO(L0_NON_RD)</a></li>
-                <li><a href="https://accesscomputech-my.sharepoint.com/personal/jalpan_acpl_ind_in/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fjalpan%5Facpl%5Find%5Fin%2FDocuments%2FRD%5FSETUPS%2FACPL%5FL1%5FAPI%5FSETUP&ga=1">STARTEK(L1_API)</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/STARTEK(L1).rar">STARTEK(L1_API)</a></li>
                 <li><a href="https://aisectfi.com/softwares/1722067168.rar">PERI(1.79)</a></li>
                 <li><a href="https://aisectfi.com/softwares/1722066403.rar">(MATM-YONO)</a></li>
                 <li><a href="https://aisectfi.com/softwares/1722066131.zips">(MATM 3.12)</a></li>
@@ -82,6 +82,7 @@
                 <li><a href="https://cdn.shopify.com/s/files/1/2363/5731/files/Windows_L1-RDServiceV5.0.0.10-HTTPs-127.0.0.1_2.zip?v=1758707582">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/Windows_L1-RDServiceV2.0.0.13-HTTPs-127.0.0.1_1.zip">MORPHO(L1)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/STARTEK(L1).rar">STARTEK(L1_API)</a></li>
                 <li><a href="">PERI</a></li>
                 <li><a href="">PRINTER</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Pax_Driver(UBI__BOB).rar">PINPAD</a></li>
@@ -97,6 +98,7 @@
                 <li><a href="https://cdn.shopify.com/s/files/1/2363/5731/files/Windows_L1-RDServiceV5.0.0.10-HTTPs-127.0.0.1_2.zip?v=1758707582">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/Windows_L1-RDServiceV2.0.0.13-HTTPs-127.0.0.1_1.zip">MORPHO(L1 V.13)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/STARTEK(L1).rar">STARTEK(L1_API)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/7bb4b8d809a37804082fae88d883019874d52ec2/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <p>https://fi.bankofindia.bank.in</p>
             </ul>
@@ -109,7 +111,8 @@
                 <li><a href="https://cdn.shopify.com/s/files/1/2363/5731/files/Windows_L1RDServiceV5.0.0.10-HTTP_2.zip?v=1758707582">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
                 <li><a href="">MORPHO(L1 V.13)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/MANTRA(L1).rar">MANTRA(l1)</a></li>
-                <li><a href="">GANSEVA</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/STARTEK(L1).rar">STARTEK(L1_API)</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/Ganaseva_Web.zip">GANSEVA</a></li>
                 <li><a href="">PINPAD</a></li>
                 <p>https://fi.centralbank.org.in/CBI_Webapplication</p>
             </ul>
@@ -147,6 +150,7 @@
 
 </html>
 <!-- https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/ + [File Ka Pura Naam]<!--  --> -->
+
 
 
 
