--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/Windows_L1-RDServiceV2.0.0.13-HTTPs-127.0.0.1_1.zip">MORPHO(L1)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/MANTRA(L1).rar">MANTRA(L1)</a></li>
                 <!-- <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/STARTEK(L1).rar">STARTEK(L1_API)</a></li> -->
-                <li><a href="">PERI</a></li>
-                <li><a href="">PRINTER</a></li>
+                <li><a href="">PERI(UPDATE-SOON)</a></li>
+                <li><a href="">PRINTER(UPDATE-SOON)</a></li>
                 <li><a href="https://github.com/sachinkojage619/Banking-Software/blob/main/Pax_Driver(UBI__BOB).rar">PINPAD</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/7bb4b8d809a37804082fae88d883019874d52ec2/Driver-for-USB-GPS-8.rar">GPS</a></li>
                 <P>https://fig.bankofbaroda.in</p>
@@ -109,7 +109,7 @@
 
             <ul>
                 <li><a href="https://cdn.shopify.com/s/files/1/2363/5731/files/Windows_L1RDServiceV5.0.0.10-HTTP_2.zip?v=1758707582">MORPHO(L1 V5.0.0.10)</a><b>NEW</b></li>
-                <li><a href="">MORPHO(L1 V.13)</a></li>
+                <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/Windows_L1RDServiceV2.0.0.13-HTTP.rar">MORPHO(L1 V.13)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/MANTRA(L1).rar">MANTRA(l1)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/STARTEK(L1).rar">STARTEK(L1_API)</a></li>
                 <li><a href="https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/Ganaseva_Web.zip">GANSEVA</a></li>
@@ -150,6 +150,7 @@
 
 </html>
 <!-- https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/ + [File Ka Pura Naam]<!--  -->
+
 
 
 
