--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
        b{
         color: red;
        }
+       summary:hover{
+        font-size: 40px;
+        color:blue;
+       }
+       a:hover{
+        color:black;
+        font-size: 20px;
+       }
+       li:hover{
+        color: rgb(0, 225, 255);
+        color:orangered;
+       }
+        b:hover{
+            font-size:20px;
+        }
+            
     </style>
 </head>
 
@@ -150,6 +166,7 @@
 
 </html>
 <!-- https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/ + [File Ka Pura Naam]<!--  -->
+
 
 
 
