--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         b:hover{
             font-size:20px;
         }
+         p:hover{
+        font-size: 20px;
+        text-decoration: none;
+        font-style: normal;
+       }
             
     </style>
 </head>
@@ -166,6 +171,7 @@
 
 </html>
 <!-- https://raw.githubusercontent.com/sachinkojage619/Banking-Software/main/ + [File Ka Pura Naam]<!--  -->
+
 
 
 
